Modified the essentials

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@ local_settings.py
 __pycache__/
 *.py[cod]
 
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
+
