--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 amqp==2.3.2
+apipkg==1.5
+atomicwrites==1.3.0
+attrs==18.2.0
 Babel==2.6.0
 billiard==3.5.0.4
 blessings==1.7
@@ -8,12 +11,21 @@ certifi==2018.10.15
 chardet==3.0.4
 curtsies==0.3.0
 Django==2.1.2
+execnet==1.5.0
 flower==0.9.2
 greenlet==0.4.15
 idna==2.7
 kombu==4.2.1
+more-itertools==6.0.0
 Pillow==5.3.0
+pkg-resources==0.0.0
+pluggy==0.8.1
+py==1.8.0
 Pygments==2.2.0
+pytest==4.3.0
+pytest-django==3.4.7
+pytest-forked==1.0.2
+pytest-xdist==1.26.1
 pytz==2018.5
 requests==2.20.0
 six==1.11.0
