--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ idna==2.7
 kombu==4.2.1
 more-itertools==6.0.0
 Pillow==5.3.0
-pkg-resources==0.0.0
+pkg-resources
 pluggy==0.8.1
 py==1.8.0
 Pygments==2.2.0
