--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - python manage.py makemigrations
+  - python manage.py migrate
 # command to run tests
 env:
   - DJANGO_VERSION=2.1.2
