--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ install:
   - python manage.py makemigrations
   - python manage.py migrate
 # command to run tests
+script:
+  - pytest
 env:
   - DJANGO_VERSION=2.1.2
