--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
   - pip install -r requirements.txt
   - python manage.py makemigrations
   - python manage.py migrate
+  - python manage.py runserver
 # command to run tests
 script:
   - echo "Hello World!"
