--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,26 @@ local_settings.py
 __pycache__/
 *.py[cod]
 
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFESTs
 
 # Editor directories and files
 .idea
